# test-repo

./: .gitignore  .mdbook-lint.toml  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  API_AUDIT.md  CHANGELOG.md  CLAUDE.md  CLI_PLAN.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.alpine  Dockerfile.dev  Dockerfile.publish  Dockerfile.test  FEATURES.md  ISSUE_MIGRATION_AUDIT.md  MIGRATION_PLAN.md  Makefile  PHASE_2_AUDIT.md  PHASE_2_SUMMARY.md  README.md  RELEASE_AUTOMATION_STATUS.md  TEST_COVERAGE_AUDIT.md  cliff.toml  deny.toml  dist-workspace.toml  docker-compose.dev.yml  docker-compose.yml  release-please-config.json  release-plz.toml  rust-workspace-release-automation-guide.md  test_cloud_output.sh
.github/: pull_request_template.md
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  docker-publish.yml  docker-test.yml  docker.yml  mdbook.yml  (+6 more)
crates/redis-cloud/: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_TRACKING.md  README.md
crates/redis-cloud/examples/: basic.rs  basic_cloud.rs  database_management.rs
crates/redis-cloud/src/: account.rs  acl.rs  api_keys.rs  backup.rs  billing.rs  cidr.rs  client.rs  cloud_accounts.rs  connectivity.rs  crdb.rs  database.rs  databases.rs  error.rs  fixed.rs  fixed_databases.rs  fixed_plans.rs  fixed_subscriptions.rs  lib.rs  lib_tests.rs  logs.rs  maintenance_windows.rs  metrics.rs  payment_methods.rs  peering.rs  peerings.rs  private_service_connect.rs  region.rs  regions.rs  sso.rs  subscription.rs  subscriptions.rs  tasks.rs  transit_gateway.rs  transit_gateways.rs  types.rs  users.rs
crates/redis-cloud/src/connectivity/: mod.rs  psc.rs  transit_gateway.rs  vpc_peering.rs
crates/redis-cloud/src/fixed/: databases.rs  subscriptions.rs
crates/redis-cloud/src/flexible/: databases.rs  subscriptions.rs
crates/redis-cloud/src/handlers/: account.rs  acl.rs  api_keys.rs  backup.rs  billing.rs  cloud_accounts.rs  crdb.rs  database.rs  fixed.rs  logs.rs  metrics.rs  mod.rs  peering.rs  private_service_connect.rs  region.rs  sso.rs  subscription.rs  tasks.rs  transit_gateway.rs  users.rs
crates/redis-cloud/src/handlers_backup/: account.rs  api_keys.rs  backup.rs  cloud_accounts.rs  crdb.rs  fixed.rs  peering.rs  region.rs  sso.rs  tasks.rs  transit_gateway.rs
crates/redis-cloud/src/models/: account.rs  acl.rs  api_keys.rs  backup.rs  billing.rs  cloud_accounts.rs  crdb.rs  database.rs  logs.rs  metrics.rs  mod.rs  peering.rs  private_service_connect.rs  region.rs  sso.rs  subscription.rs  tasks.rs  transit_gateway.rs  users.rs
crates/redis-cloud/tests/: account_tests.rs  acl_tests.rs  api_keys_tests.rs  backup_tests.rs  billing_tests.rs  cloud_accounts_tests.rs  connectivity_tests.rs  crdb_tests.rs  database_tests.rs  databases_tests.rs  fixed_databases_tests.rs  fixed_subscriptions_tests.rs  fixed_tests.rs  logs_tests.rs  metrics_tests.rs  mod.rs  peering_tests.rs  private_service_connect_tests.rs  region_tests.rs  sso_tests.rs  subscription_tests.rs  subscriptions_tests.rs  task_tests.rs  tasks_tests.rs  transit_gateway_tests.rs  user_tests.rs  users_tests.rs
crates/redis-cloud/tests_backup/: account_tests.rs  backup_tests.rs  cloud_accounts_tests.rs  crdb_tests.rs  database_tests.rs  metrics_tests.rs  mod.rs  private_service_connect_tests.rs  region_tests.rs  sso_tests.rs  users_tests.rs
crates/redis-common/: CHANGELOG.md  Cargo.toml
crates/redis-common/src/: config.rs  error.rs  lib.rs  output.rs
crates/redis-enterprise/: CHANGELOG.md  Cargo.toml  README.md
crates/redis-enterprise/examples/: basic.rs  database_management.rs
crates/redis-enterprise/src/: actions.rs  alerts.rs  bdb.rs  bdb_groups.rs  bootstrap.rs  client.rs  cluster.rs  cm_settings.rs  crdb.rs  crdb_tasks.rs  debuginfo.rs  diagnostics.rs  endpoints.rs  error.rs  job_scheduler.rs  jsonschema.rs  ldap_mappings.rs  lib.rs  lib_tests.rs  license.rs  local.rs  logs.rs  migrations.rs  modules.rs  nodes.rs  ocsp.rs  proxies.rs  redis_acls.rs  roles.rs  services.rs  shards.rs  stats.rs  suffixes.rs  usage_report.rs  users.rs
crates/redis-enterprise/tests/: action_tests.rs  alerts_tests.rs  bootstrap_tests.rs  cluster_tests.rs  crdb_tests.rs  database_tests.rs  debuginfo_tests.rs  license_tests.rs  logs_tests.rs  mod.rs  module_tests.rs  node_tests.rs  proxy_tests.rs  redis_acl_tests.rs  shard_tests.rs  stats_tests.rs  user_tests.rs
crates/redis-enterprise/tests/common/: mod.rs
crates/redisctl/: CHANGELOG.md  Cargo.toml
crates/redisctl/benches/: api_performance.rs
crates/redisctl/legacy/: api_tests.rs
crates/redisctl/src/: cli.rs  cloud_bin.rs  config.rs  connection.rs  enterprise_bin.rs  error.rs  lib.rs  main.rs  output.rs  router.rs
crates/redisctl/src/commands/: api.rs  auth.rs  cloud.rs  cloud_billing.rs  cloud_v2.rs  config.rs  enterprise.rs  mod.rs  profile.rs
crates/redisctl/src/commands/cloud/: account.rs  acl.rs  acl_impl.rs  async_utils.rs  cloud_account.rs  cloud_account_impl.rs  database.rs  database_impl.rs  fixed_database.rs  fixed_subscription.rs  mod.rs  subscription.rs  subscription_impl.rs  task.rs  user.rs  utils.rs
crates/redisctl/src/commands/cloud/connectivity/: mod.rs  psc.rs  tgw.rs  vpc_peering.rs
crates/redisctl/src/commands/enterprise/: cluster.rs  cluster_impl.rs  crdb.rs  crdb_impl.rs  database.rs  database_impl.rs  mod.rs  node.rs  node_impl.rs  rbac.rs  rbac_impl.rs  utils.rs
crates/redisctl/src/legacy/: enterprise_bin.rs
crates/redisctl/src/legacy/commands/: api.rs  auth.rs  enterprise.rs  mod.rs
crates/redisctl/src/legacy/workflows/: cluster.rs
crates/redisctl/src/workflows/: database.rs  mod.rs
crates/redisctl/tests/: cloud_output_test.rs  test_enterprise_live.rs
docs/: .mdbook-lint.toml  CONFIGURATION_AUDIT.md  EXAMPLES.md  MDBOOK_LINT_BUG_REPORT.md  PERFORMANCE.md  RELEASE_PROCESS.md  book.toml  full-config.toml  redis-cloud-typed-coverage-plan.md  temp-config.toml
scripts/: README.md  check-api-coverage.py  convert_generated_model.py  debug-release.sh  generate-cli-docs.sh  generate_from_openapi.py  generate_from_openapi_v2.py  install-hooks.sh
(+211 files in other folders)
