[workspace]
resolver = "2"
members = [
    "crates/redis-cloud",
    "crates/redis-enterprise", 
    "crates/redis-common",
    "crates/redisctl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Redis Field Engineering <redis-field-engineering@redis.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/redis-field-engineering/redisctl"
homepage = "https://github.com/redis-field-engineering/redisctl"
documentation = "https://docs.rs/redisctl"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
clap = { version = "4.5", features = ["derive", "env", "string"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# HTTP and APIs
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.15"
toml = "0.9"
directories = "6.0"

# Terminal and output
comfy-table = "7.1"
serde_yaml = "0.9"
csv = "1.3"
jmespath = "0.4"

# Password input
rpassword = "7.4"

# Testing
wiremock = "0.6"
mockall = "0.13"
serial_test = "3.1"
pretty_assertions = "1.4"

# Internal crates
redis-cloud = { path = "crates/redis-cloud" }
redis-enterprise = { path = "crates/redis-enterprise" }
redis-common = { path = "crates/redis-common" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
