[package]
name = "redis-cloud"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Redis Cloud REST API client library"
keywords = ["redis", "cloud", "api", "rest", "client"]
categories = ["api-bindings", "database"]
readme = "../../README.md"

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
