[package]
name = "redis-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared utilities for Redis CLI tools"
keywords = ["redis", "cli", "common", "utilities"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
comfy-table = { workspace = true }
jmespath = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }