[package]
name = "redis-enterprise"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Redis Enterprise REST API client library"
keywords = ["redis", "enterprise", "api", "rest", "client"]
categories = ["api-bindings", "database"]
readme = "README.md"
publish = false

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
