[package]
name = "redisctl"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified CLI for Redis Cloud and Enterprise"
keywords = ["redis", "cli", "cloud", "enterprise", "database"]
categories = ["command-line-utilities", "api-bindings"]
readme = "../../README.md"

[[bin]]
name = "redisctl"
path = "src/main.rs"

[dependencies]
redis-cloud = { version = "0.1.1", path = "../redis-cloud" }
redis-enterprise = { version = "0.1.1", path = "../redis-enterprise" }

# CLI dependencies
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
rpassword = { workspace = true }
urlencoding = "2.1"
dialoguer = "0.11"
colored = "2.1"

# Shared utility dependencies
thiserror = { workspace = true }
serde_yaml = { workspace = true }
comfy-table = { workspace = true }
jmespath = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }

# Conditional dependencies for feature-gated binaries
[features]
default = ["full"]
full = ["cloud", "enterprise"]
cloud = []
enterprise = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "api_performance"
harness = false
