[package]
name = "redisctl"
version = "0.2.0"
edition = "2024"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/redisctl"
homepage = "https://github.com/joshrotenberg/redisctl"
description = "Unified CLI for Redis Cloud and Enterprise"
keywords = ["redis", "cli", "cloud", "enterprise", "database"]
categories = ["command-line-utilities", "api-bindings"]
readme = "../../README.md"

[[bin]]
name = "redisctl"
path = "src/main.rs"

[dependencies]
redis-cloud = { version = "0.1.2", path = "../redis-cloud" }
redis-enterprise = { version = "0.2.0", path = "../redis-enterprise" }

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env", "string"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rpassword = "7.4"
urlencoding = "2.1"
dialoguer = "0.11"
colored = "2.1"
tabled = { version = "0.17", features = ["ansi"] }
terminal_size = "0.4"

[target.'cfg(unix)'.dependencies]
pager = "0.16"

# Shared utility dependencies
thiserror = "2.0"
serde_yaml = "0.9"
comfy-table = "7.2"
jmespath = "0.4"
config = "0.15"
toml = "0.9"
directories = "6.0"
shellexpand = "3.1"

# Conditional dependencies for feature-gated binaries
[features]
default = ["full"]
full = ["cloud", "enterprise"]
cloud = []
enterprise = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = "0.5"
serial_test = "3.1"

[[bench]]
name = "api_performance"
harness = false
